--- a/main.html
+++ b/main.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Gsap test</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
     <script src="gsapConfig.js"></script>
-<style>
+
+    <style>
     body{
         height: 100vh;
         display: flex;
@@ -14,15 +19,50 @@
         margin: 0;
         background-color: #303030;
     }
-    div{
-        background-image: linear-gradient(to right, #00fff7, #cbd2ff);
-        width: 15%;
-        height: 25%;
+    .lilDiv{
+        aspect-ratio: 1/1;
+        width: 3rem;
         border-radius: 1rem;
+    }
+    .imageStyle{
+        background-position: center;
+        background-size: cover;
     }
 </style>
 </head>
-<body>
-    <div></div>
+<body class="flex-column text-center">
+<nav class="navbar bg-body-tertiary container-fluid position-sticky bottom-100 py-2">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1 text-warning">GSAP_Project</span>
+        <div class="father d-flex">
+            <div class="lilDiv mx-2" style="background-image: linear-gradient(to right, #00fff7, #0095ff);"></div>
+            <div class="lilDiv mx-2" style="background-image: linear-gradient(to top, rgb(77 176 189), rgb(0 255 104));"></div>
+            <div class="lilDiv mx-2" style="background-image: radial-gradient(#fffb00, #ff8800);"></div>
+
+        </div>
+    </div>
+</nav>
+<!--First Card-->
+<div class="card-group container-fluid h-75">
+    <div class="card mx-3 rounded-5 imageStyle" style="background-image: url(plain.jpg)";>
+        <div class="align-content-end card-img-overlay p-0">
+            <div class="bg-black bg-opacity-50 rounded-bottom-5 pt-1 movingDiv">
+                <h5 class="card-title text-warning m-0">Card title</h5>
+            </div>
+        </div>
+    </div>
+<!--Middle-->
+    <div class="d-flex flex-row align-items-center text-light">
+            <h1>Wee</h1>
+            <h1 class="ms-1">Woo</h1>
+    </div>
+<!--Last card-->
+    <div class="card mx-3 rounded-5 imageStyle" style="background-image: url(content.jpg)";>
+        <div class="card-img-overlay align-content-center">
+            <h5 class="card-title">Card title</h5>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
