--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
+    <script src="https://kit.fontawesome.com/7963dd1579.js" crossorigin="anonymous"></script>
     <script src="gsapConfig.js"></script>
 
     <style>
@@ -47,19 +48,22 @@
     <div class="card mx-3 rounded-5 imageStyle" style="background-image: url(plain.jpg)";>
         <div class="align-content-end card-img-overlay p-0">
             <div class="bg-black bg-opacity-50 rounded-bottom-5 pt-1 movingDiv">
-                <h5 class="card-title text-warning m-0">Card title</h5>
+                <h5 class="card-title text-warning m-0">Orihime n.1 hater<i class='fas fa-angry ms-1'></i></h5>
             </div>
         </div>
     </div>
 <!--Middle-->
-    <div class="d-flex flex-row align-items-center text-light">
-            <h1>Wee</h1>
-            <h1 class="ms-1">Woo</h1>
+    <div class="d-flex flex-column justify-content-center align-items-center text-light">
+        <div class="d-flex"><h1>I hate</h1>
+            <h1 class="ms-1">simps like Orihime</h1></div>
+        <div class="spinner-border text-warning"></div>
     </div>
 <!--Last card-->
     <div class="card mx-3 rounded-5 imageStyle" style="background-image: url(content.jpg)";>
-        <div class="card-img-overlay align-content-center">
-            <h5 class="card-title">Card title</h5>
+        <div class="align-content-end card-img-overlay p-0">
+            <div class="bg-black bg-opacity-50 rounded-bottom-5 pt-1 movingDiv">
+                <h5 class="card-title text-warning m-0">Sakura is less annoying<i class='fab fa-envira ms-1'></i></h5>
+            </div>
         </div>
     </div>
 </div>
