--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 <body class="flex-column text-center">
 <nav class="navbar bg-body-tertiary container-fluid position-sticky bottom-100 py-2">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1 text-warning">GSAP_Project</span>
+        <span class="navbar-brand mb-0 h1 text-warning" style="font-size: 3rem;">GSAP_Project</span>
         <div class="father d-flex">
             <div class="lilDiv mx-2" style="background-image: linear-gradient(to right, #00fff7, #0095ff);"></div>
             <div class="lilDiv mx-2" style="background-image: linear-gradient(to top, rgb(77 176 189), rgb(0 255 104));"></div>
@@ -43,8 +43,9 @@
         </div>
     </div>
 </nav>
+<!--Container-->
+<div class="card-group container-fluid" style="height: 75%;aspect-ratio: 2/1;">
 <!--First Card-->
-<div class="card-group container-fluid h-75">
     <div class="card mx-3 rounded-5 imageStyle" style="background-image: url(plain.jpg)";>
         <div class="align-content-end card-img-overlay p-0">
             <div class="bg-black bg-opacity-50 rounded-bottom-5 pt-1 movingDiv">
